# connected-speech-classification

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: sphinx.yml  tests.yml
connected_speech_classification/: __init__.py  constants.py  dataset.py  features.py  plots.py  utils.py
connected_speech_classification/data/: prepare_disease_status_datasets.py  preprocess_lcn_transcripts.py
connected_speech_classification/evaluation/: evaluate_disease_status_classifier.py  format_mlflow_results.py
connected_speech_classification/modeling/: predict.py  train.py
connected_speech_classification/models/: disease_status_classifier.py  multi_task_classification_model.py
connected_speech_classification/visualization/: roc_analysis.py  visualize_classification_metrics.py
docs/: conf.py  index.rst  mkdocs.yml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/docs/: index.md
scripts/combined/: debug_all.sh  run_ad_amyloid_pos.sh  run_all.sh  run_imbalanced_baseline.sh
