[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "connected_speech_classification"
version = "0.0.1"
description = "Classification of Alzheimer's disease and Amyloid Status from Transcribed Connected Speech."
authors = [
  { name = "Helena Balabin" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["connected_speech_classification"]
force_sort_within_sections = true
