[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "connected_speech_classification"
version = "0.0.1"
description = "Classification of Alzheimer's disease and Amyloid Status from Transcribed Connected Speech."
authors = [
  { name = "Helena Balabin", email = "helena.balabin@kuleuven.be" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning"
]
url = "https://github.com/lcn-kul/connected_speech_classification"
requires-python = "~=3.11"
keywords = ["connected speech", "alzheimer's disease", "natural langauge processing"]

[project.urls]
Homepage = "https://github.com/lcn-kul/connected_speech_classification"

[tool.black]
line-length = 128
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
include = ["python_coverage_demo/*.py"]
show_missing = true

[tool.ruff]
line-length = 128

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401",  # imperative mood
    "N816",  # related to indentation
    "N806",   # related to indentation
    "I001",  # some import order inconsistency across linters
    "B023"
]

[tool.ruff.lint.pydocstyle]
convention = "google"